--- a/.gitignore
+++ b/.gitignore
@@ -69,4 +69,82 @@ cpp17/Concurrency/build/CMakeFiles/progress.marks
 cpp17/Concurrency/build/CMakeFiles/TargetDirectories.txt
 cpp17/Concurrency/build/customerToken
 cpp17/Concurrency/build/Makefile
-cpp17/Concurrency/CMakeLIsts.txt
+cpp17/Concurrency/build/CMakeFiles/atomic_counterEx.dir/compiler_depend.internal
+cpp17/Concurrency/build/CMakeFiles/blocked_queue_OT_error.dir/compiler_depend.internal
+cpp17/Concurrency/build/CMakeFiles/Blocking_bound_q_Ex.dir/compiler_depend.internal
+cpp17/Concurrency/build/CMakeFiles/customerToken.dir/compiler_depend.internal
+cpp17/Concurrency/build/CMakeFiles/sch.dir/build.make
+cpp17/Concurrency/build/CMakeFiles/sch.dir/cmake_clean.cmake
+cpp17/Concurrency/build/CMakeFiles/sch.dir/compiler_depend.make
+cpp17/Concurrency/build/CMakeFiles/sch.dir/compiler_depend.ts
+cpp17/Concurrency/build/CMakeFiles/sch.dir/depend.make
+cpp17/Concurrency/build/CMakeFiles/sch.dir/DependInfo.cmake
+cpp17/Concurrency/build/CMakeFiles/sch.dir/flags.make
+cpp17/Concurrency/build/CMakeFiles/sch.dir/link.txt
+cpp17/Concurrency/build/CMakeFiles/sch.dir/progress.make
+cpp17/Concurrency/build/CMakeFiles/sch.dir/sch.cpp.o
+cpp17/Concurrency/build/CMakeFiles/sch.dir/sch.cpp.o.d
+cpp17/Concurrency/build/sch
+cpp17/Concurrency/cmake_install.cmake
+cpp17/Concurrency/CMakeCache.txt
+cpp17/Concurrency/CMakeFiles/3.24.2/CMakeCCompiler.cmake
+cpp17/Concurrency/CMakeFiles/3.24.2/CMakeCXXCompiler.cmake
+cpp17/Concurrency/CMakeFiles/3.24.2/CMakeDetermineCompilerABI_C.bin
+cpp17/Concurrency/CMakeFiles/3.24.2/CMakeDetermineCompilerABI_CXX.bin
+cpp17/Concurrency/CMakeFiles/3.24.2/CMakeSystem.cmake
+cpp17/Concurrency/CMakeFiles/3.24.2/CompilerIdC/a.out
+cpp17/Concurrency/CMakeFiles/3.24.2/CompilerIdC/CMakeCCompilerId.c
+cpp17/Concurrency/CMakeFiles/3.24.2/CompilerIdCXX/a.out
+cpp17/Concurrency/CMakeFiles/3.24.2/CompilerIdCXX/CMakeCXXCompilerId.cpp
+cpp17/Concurrency/CMakeFiles/atomic_counterEx.dir/build.make
+cpp17/Concurrency/CMakeFiles/atomic_counterEx.dir/cmake_clean.cmake
+cpp17/Concurrency/CMakeFiles/atomic_counterEx.dir/compiler_depend.make
+cpp17/Concurrency/CMakeFiles/atomic_counterEx.dir/compiler_depend.ts
+cpp17/Concurrency/CMakeFiles/atomic_counterEx.dir/depend.make
+cpp17/Concurrency/CMakeFiles/atomic_counterEx.dir/DependInfo.cmake
+cpp17/Concurrency/CMakeFiles/atomic_counterEx.dir/flags.make
+cpp17/Concurrency/CMakeFiles/atomic_counterEx.dir/link.txt
+cpp17/Concurrency/CMakeFiles/atomic_counterEx.dir/progress.make
+cpp17/Concurrency/CMakeFiles/blocked_queue_OT_error.dir/build.make
+cpp17/Concurrency/CMakeFiles/blocked_queue_OT_error.dir/cmake_clean.cmake
+cpp17/Concurrency/CMakeFiles/blocked_queue_OT_error.dir/compiler_depend.make
+cpp17/Concurrency/CMakeFiles/blocked_queue_OT_error.dir/compiler_depend.ts
+cpp17/Concurrency/CMakeFiles/blocked_queue_OT_error.dir/depend.make
+cpp17/Concurrency/CMakeFiles/blocked_queue_OT_error.dir/DependInfo.cmake
+cpp17/Concurrency/CMakeFiles/blocked_queue_OT_error.dir/flags.make
+cpp17/Concurrency/CMakeFiles/blocked_queue_OT_error.dir/link.txt
+cpp17/Concurrency/CMakeFiles/blocked_queue_OT_error.dir/progress.make
+cpp17/Concurrency/CMakeFiles/Blocking_bound_q_Ex.dir/build.make
+cpp17/Concurrency/CMakeFiles/Blocking_bound_q_Ex.dir/cmake_clean.cmake
+cpp17/Concurrency/CMakeFiles/Blocking_bound_q_Ex.dir/compiler_depend.make
+cpp17/Concurrency/CMakeFiles/Blocking_bound_q_Ex.dir/compiler_depend.ts
+cpp17/Concurrency/CMakeFiles/Blocking_bound_q_Ex.dir/depend.make
+cpp17/Concurrency/CMakeFiles/Blocking_bound_q_Ex.dir/DependInfo.cmake
+cpp17/Concurrency/CMakeFiles/Blocking_bound_q_Ex.dir/flags.make
+cpp17/Concurrency/CMakeFiles/Blocking_bound_q_Ex.dir/link.txt
+cpp17/Concurrency/CMakeFiles/Blocking_bound_q_Ex.dir/progress.make
+cpp17/Concurrency/CMakeFiles/cmake.check_cache
+cpp17/Concurrency/CMakeFiles/CMakeDirectoryInformation.cmake
+cpp17/Concurrency/CMakeFiles/CMakeOutput.log
+cpp17/Concurrency/CMakeFiles/customerToken.dir/build.make
+cpp17/Concurrency/CMakeFiles/customerToken.dir/cmake_clean.cmake
+cpp17/Concurrency/CMakeFiles/customerToken.dir/compiler_depend.make
+cpp17/Concurrency/CMakeFiles/customerToken.dir/compiler_depend.ts
+cpp17/Concurrency/CMakeFiles/customerToken.dir/depend.make
+cpp17/Concurrency/CMakeFiles/customerToken.dir/DependInfo.cmake
+cpp17/Concurrency/CMakeFiles/customerToken.dir/flags.make
+cpp17/Concurrency/CMakeFiles/customerToken.dir/link.txt
+cpp17/Concurrency/CMakeFiles/customerToken.dir/progress.make
+cpp17/Concurrency/CMakeFiles/Makefile.cmake
+cpp17/Concurrency/CMakeFiles/Makefile2
+cpp17/Concurrency/CMakeFiles/progress.marks
+cpp17/Concurrency/CMakeFiles/sch.dir/build.make
+cpp17/Concurrency/CMakeFiles/sch.dir/cmake_clean.cmake
+cpp17/Concurrency/CMakeFiles/sch.dir/compiler_depend.make
+cpp17/Concurrency/CMakeFiles/sch.dir/compiler_depend.ts
+cpp17/Concurrency/CMakeFiles/sch.dir/depend.make
+cpp17/Concurrency/CMakeFiles/sch.dir/DependInfo.cmake
+cpp17/Concurrency/CMakeFiles/sch.dir/flags.make
+cpp17/Concurrency/CMakeFiles/sch.dir/link.txt
+cpp17/Concurrency/CMakeFiles/sch.dir/progress.make
+cpp17/Concurrency/CMakeFiles/TargetDirectories.txt
