--- a/.gitignore
+++ b/.gitignore
@@ -148,3 +148,4 @@ cpp17/Concurrency/CMakeFiles/sch.dir/flags.make
 cpp17/Concurrency/CMakeFiles/sch.dir/link.txt
 cpp17/Concurrency/CMakeFiles/sch.dir/progress.make
 cpp17/Concurrency/CMakeFiles/TargetDirectories.txt
+cpp17/Concurrency/.goutputstream-UJD601
