--- a/cpp/stl/vs_cpp_ex/CMakeLists.txt
+++ b/cpp/stl/vs_cpp_ex/CMakeLists.txt
@@ -1,7 +1,7 @@
 cmake_minimum_required(VERSION 2.8)
 
 # use c++ 11
-set(CMAKE_CXX_STANDARD 17)
+set(CMAKE_CXX_STANDARD 20)
 
 # set project name
 project( vs_cpp_ex_ )
@@ -9,7 +9,7 @@ project( vs_cpp_ex_ )
 # set include directory
 #include_directories( include )
 
-find_package(fmt CONFIG REQUIRED)
+#find_package(fmt CONFIG REQUIRED)
 
 # source files to compile
 #add_executable( cpp-callback
@@ -34,8 +34,8 @@ add_executable( stdmoveConst
 add_executable( test
                 test.cpp )
 
-add_executable( packageEx 
-                packageEx.cpp)
+#add_executable( packageEx 
+#                packageEx.cpp)
 
 add_executable( memBlockEx 
                 memBlockEx.cpp)
@@ -49,8 +49,8 @@ add_executable( lamdaEx
 add_executable( bitWiseOp
                 bitWiseOp.cpp)
 
-add_executable( evenOdd
-                evenOdd.cpp)
+#add_executable( evenOdd
+#                evenOdd.cpp)
 
 add_executable( cToCppEx
                 cToCppEx.cpp )
@@ -58,6 +58,9 @@ add_executable( cToCppEx
 add_executable ( strongTypeEx
                  strongTypeEx.cpp )
 
+add_executable ( dequeEx
+                 dequeEx.cpp )
+
 # how to link to a library (OpenCV as example)
 # target_link_libraries( cpp-callback ${OpenCV_LIBS} )
-target_link_libraries(packageEx PRIVATE fmt::fmt-header-only) 
+#target_link_libraries(packageEx PRIVATE fmt::fmt-header-only) 
