update dsa examples

--- a/.gitignore
+++ b/.gitignore
@@ -2,3 +2,4 @@ cpp/stl/vs_cpp_ex/build/**
 cpp/stl/smartPtrs/build/**
 cpp/Concurrency/build/**
 cpp/projects/wordFrequency/build/**
+cpp/dsa/stack/build/**
